add feature border

--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
                   fringilla.
                 </p>
                 <p>
-                  <a href="#" class="btn btn-sm btn-{shopBtnVariant}"
+                  <a href="#" class="btn btn-sm btn-{shopBtnVariant} feature-ab"
                     >Shop Now</a
                   >
                 </p>
@@ -392,7 +392,7 @@
         </div>
       </div>
 
-      <div class="site-section block-8 {showPromotion}">
+      <div class="site-section block-8 {showPromotion} feature-toggle">
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-7 site-section-heading text-center pt-4">
@@ -420,7 +420,9 @@
                 deleniti fugiat. Ex, veniam?
               </p>
               <p>
-                <a href="#" class="btn btn-{shopBtnVariant} btn-sm">Shop Now</a>
+                <a href="#" class="btn btn-{shopBtnVariant} btn-sm feature-ab"
+                  >Shop Now</a
+                >
               </p>
             </div>
           </div>
