--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,12 @@
                   fringilla.
                 </p>
                 <p>
-                  <a href="#" class="btn btn-sm btn-{shopBtnVariant} feature-ab"
+                  <a
+                    href="#"
+                    class="btn btn-sm btn-{shopBtnVariant} feature-ab"
+                    data-bs-toggle="tooltip"
+                    data-bs-html="true"
+                    title="<div class='text-start'> Flag key: <b>shopBtnVariant</b> </br> Flag value: <b>{shopBtnVariant} </b> </br> Original value: <b>{shopBtnVariantOriginal}<b> </div>"
                     >Shop Now</a
                   >
                 </p>
@@ -392,7 +397,13 @@
         </div>
       </div>
 
-      <div class="site-section block-8 {showPromotion} feature-toggle">
+      <div
+        class="site-section block-8 {showPromotion} feature-toggle"
+        data-bs-toggle="tooltip"
+        data-bs-placement="auto"
+        data-bs-html="true"
+        title="<div class='text-start'> Flag key: <b>showPromotion</b> </br> Flag value: <b>{showPromotion} </b> </br> Original value: <b>{showPromotionOriginal}<b> </div>"
+      >
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-7 site-section-heading text-center pt-4">
@@ -420,7 +431,12 @@
                 deleniti fugiat. Ex, veniam?
               </p>
               <p>
-                <a href="#" class="btn btn-{shopBtnVariant} btn-sm feature-ab"
+                <a
+                  href="#"
+                  class="btn btn-{shopBtnVariant} btn-sm feature-ab"
+                  data-bs-toggle="tooltip"
+                  data-bs-html="true"
+                  title="<div class='text-start'> Flag key: <b>shopBtnVariant</b> </br> Flag value: <b>{shopBtnVariant} </b> </br> Original value: <b>{shopBtnVariantOriginal}<b> </div>"
                   >Shop Now</a
                 >
               </p>
