--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
                     class="btn btn-sm btn-{shopBtnVariant} feature-ab"
                     data-bs-toggle="tooltip"
                     data-bs-html="true"
-                    title="<div class='text-start'> Flag key: <b>shopBtnVariant</b> </br> Flag value: <b>{shopBtnVariant} </b> </br> Original value: <b>{shopBtnVariantOriginal}<b> </div>"
+                    title="<div> <div> Feature Ab </div> <div class='text-start'> Flag key: <b>shopBtnVariant</b> </br> Flag value: <b>{shopBtnVariant} </b> </br> Original value: <b>{shopBtnVariantOriginal}<b> </div> </div>"
                     >Shop Now</a
                   >
                 </p>
@@ -402,7 +402,7 @@
         data-bs-toggle="tooltip"
         data-bs-placement="auto"
         data-bs-html="true"
-        title="<div class='text-start'> Flag key: <b>showPromotion</b> </br> Flag value: <b>{showPromotion} </b> </br> Original value: <b>{showPromotionOriginal}<b> </div>"
+        title="<div> <div> Feature toggle </div> <div class='text-start'> Flag key: <b>showPromotion</b> </br> Flag value: <b>{showPromotion} </b> </br> Original value: <b>{showPromotionOriginal}<b> </div> </div>"
       >
         <div class="container">
           <div class="row justify-content-center mb-5">
@@ -436,7 +436,7 @@
                   class="btn btn-{shopBtnVariant} btn-sm feature-ab"
                   data-bs-toggle="tooltip"
                   data-bs-html="true"
-                  title="<div class='text-start'> Flag key: <b>shopBtnVariant</b> </br> Flag value: <b>{shopBtnVariant} </b> </br> Original value: <b>{shopBtnVariantOriginal}<b> </div>"
+                  title="<div> <div> Feature Ab </div> <div class='text-start'> Flag key: <b>shopBtnVariant</b> </br> Flag value: <b>{shopBtnVariant} </b> </br> Original value: <b>{shopBtnVariantOriginal}<b> </div> </div>"
                   >Shop Now</a
                 >
               </p>
