update fs js package

--- a/public/index.html
+++ b/public/index.html
@@ -571,6 +571,8 @@
         <div style="padding: 10px" class="mt-4">
           <h4 style="color: #fff">Data center information:</h4>
           <p>{colo}</p>
+          <p>script execution: {runDuration} ms</p>
+          <p>Page load: <span id="pageLoadId"></span> ms</p>
 
           <h4 style="color: #fff">Visitor information:</h4>
           <p>Country: {country}</p>
