fix decision mode issue

--- a/public/index.html
+++ b/public/index.html
@@ -581,7 +581,7 @@
 
           <h4 style="color: #fff">SDK information:</h4>
 
-          <p>{logs}</p>
+          <p class="text-break">{logs}</p>
         </div>
       </div>
     </div>
